--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -3,3 +3,21 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+button {
+  cursor: pointer;
+
+  background-color: transparent;
+
+  border: none;
+  outline: none;
+}
+
+input {
+  border: none;
+  outline: none;
+}
+
+li {
+  list-style: none;
+}
