--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,14 +5,17 @@
   --title-1: 6.25rem;
   --title-2: 3.75rem;
   --title-3: 2rem;
-  --title-4: 1.1875rem;
+  --title-4: 24px;
+  --title-5: 1.3125rem;
+  --title-6: 1.1875rem;
+  --title-7: 0.875rem;
 
   --title1-mobile: 3.75rem;
   --title2-mobile: 2.75rem;
 
   --paragraph: 1.25rem;
 
-  --big-price: 2rem;
+  --price: 2rem;
   --sm-price: 1.125rem;
 
   --weight-1: 700;
@@ -22,6 +25,7 @@
   --black: #000000;
   --white: #ffffff;
   --gray: #eeeeee;
+  --opacity: rgba(0, 0, 0, 0.5);
 
   --radius-1: 2.5rem;
   --radius-2: 1.25rem;
