--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 :root {
-  --font-primary: font-family: "Oswald", sans-serif;
-  --font-secondary: font-family: "Roboto", sans-serif;
+  --font-primary: "Oswald", sans-serif;
+  --font-secondary: "Roboto", sans-serif;
 
   --title-1: 6.25rem;
   --title-2: 3.75rem;
