feat: added all typography stylization

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -17,7 +17,7 @@
 .productCard-title {
   font-family: var(--font-secondary);
 
-  font-size: var(--title-4);
+  font-size: var(--title-6);
   line-height: 1.7581rem;
 
   font-weight: var(--weight-1);
@@ -62,20 +62,6 @@
   color: var(--black);
 }
 
-.button-txt {
-  font-family: var(--font-secondary);
-
-  font-size: var(--sm-price);
-  line-height: 1.3181rem;
-
-  font-weight: var(--weight-2);
-  color: var(--white);
-
-  &.black {
-    color: var(--black);
-  }
-}
-
 .navigation-title {
   font-size: var(--paragraph);
   line-height: 1.8525rem;
@@ -87,4 +73,12 @@
     font-size: var(--sm-price);
     line-height: 1.6675rem;
   }
+}
+
+.modal-title {
+  color: var(--black);
+  font-weight: var(--weight-2);
+
+  font-size: var(--title-3);
+  line-height: 3.52rem;
 }
