--- a/src/components/productList/productCard/index.module.scss
+++ b/src/components/productList/productCard/index.module.scss
@@ -18,7 +18,7 @@
   }
 
   &:hover {
-    scale: .01;
+    scale: 1.01;
     transition: 120ms;
     box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
