--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  margin: 3rem auto;
 
   &.homePage {
     flex-direction: column;
