--- a/src/components/modal/index.module.scss
+++ b/src/components/modal/index.module.scss
@@ -23,7 +23,7 @@
   box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
-  
+
   h2 {
     margin-bottom: 3%;
   }
@@ -39,4 +39,6 @@
   position: absolute;
   right: 2%;
   top: 1%;
+
+  cursor: pointer;
 }
