--- a/src/components/productList/productCard/index.module.scss
+++ b/src/components/productList/productCard/index.module.scss
@@ -19,7 +19,7 @@
 
   &:hover {
     scale: 1.01;
-    transition: 120ms;
+    transition: 0.5s;
     box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
