--- a/src/components/modal/index.module.scss
+++ b/src/components/modal/index.module.scss
@@ -1,7 +1,7 @@
 .cartModal__overlay {
   width: 100%;
-  height: 100100%;
-  position: absolute;
+  height: 100%;
+  position: fixed;
   inset: 0;
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.568);
