--- a/src/pages/productPage/style.module.scss
+++ b/src/pages/productPage/style.module.scss
@@ -32,6 +32,8 @@
 .productsSection {
   display: flex;
   flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
 
   margin: 1rem 0 5rem 5rem;
 
