--- a/src/components/modal/index.module.scss
+++ b/src/components/modal/index.module.scss
@@ -102,3 +102,30 @@
   right: 2%;
   top: 2%;
 }
+
+.deleteModal__container {
+  width: fit-content;
+  text-align: center;
+  height: fit-content;
+  position: relative;
+  padding: 1%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  background-color: var(--white);
+  box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
+}
+
+.deleModal__closeBtn {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+}
+
+.deleteBtn__container {
+  align-self: center;
+  display: flex;
+  gap: .625rem;
+}
