--- a/src/pages/loginPage/style.module.scss
+++ b/src/pages/loginPage/style.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
 
   img {
-    width: 51.25rem;
-    height: 43.1875rem;
+    max-width: 45rem;
+    height: 36.74rem;
   }
 }
