--- a/src/components/forms/style.module.scss
+++ b/src/components/forms/style.module.scss
@@ -1,6 +1,5 @@
 .form {
   width: 35.5rem;
-  height: 22.5rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -15,4 +14,29 @@
     display: flex;
     gap: 1rem;
   }
+}
+
+.registerForm__container {
+  width: 35.5rem;
+  display: flex;
+  flex-direction: column;
+  margin-left: 2.5rem;
+  gap: 1rem;
+}
+
+.form__inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  button {
+    align-self: flex-end;
+  }
+}
+
+.backBtn {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: var(--title-7);
 }
