--- a/src/pages/productPage/style.module.scss
+++ b/src/pages/productPage/style.module.scss
@@ -35,12 +35,10 @@
   width: 80%;
   margin: 0 auto;
 
-  margin: 1rem 0 5rem 5rem;
-
   ul {
     display: flex;
     gap: 1.5rem;
 
-    margin-top: 1.5rem;
+    margin: 1.5rem 0;
   }
 }
