--- a/src/pages/Dashboard/style.module.scss
+++ b/src/pages/Dashboard/style.module.scss
@@ -1,18 +1,24 @@
-.flexBox {
-  height: 40.75rem;
+.nav__container {
   margin-left: 5rem;
   margin-top: 2rem;
 
   ul {
     display: flex;
     gap: 1.5rem;
+    margin-bottom: 2rem;
   }
+}
 
-  div {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-
-    margin-top: 2rem;
+.title__container {
+  h1 {
+    margin-bottom: 1rem;
   }
+}
+
+.admin__welcome {
+  margin: 0 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  min-height: 72vh;
 }
