--- a/src/components/productList/productCard/index.module.scss
+++ b/src/components/productList/productCard/index.module.scss
@@ -4,15 +4,21 @@
   flex-direction: column;
   gap: 1.5rem;
   border-radius: 10px;
-  padding: 1%;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  box-sizing: border-box;
 
   button {
     width: 3.75rem;
   }
 
+  img {
+    border-radius: var(--radius-1);
+  }
+
   &:hover {
     scale: 1.01;
-    transition: 0.5s;
+    transition: 0.2s;
     box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
