--- a/src/pages/productPage/style.module.scss
+++ b/src/pages/productPage/style.module.scss
@@ -8,8 +8,8 @@
 }
 
 .productSection {
-  width: 83.9375rem;
-  height: 43.1875rem;
+  width: 80%;
+  height: 50%;
 
   margin: 2rem auto;
 
@@ -18,8 +18,9 @@
   gap: 3rem;
 
   img {
-    width: 36.25rem;
+    width: 40%;
     height: 41.8125rem;
+    border-radius: var(--radius-1);
   }
 
   .infosDiv {
@@ -33,7 +34,7 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-  margin: 0 auto;
+  margin: 0.5rem auto;
 
   ul {
     display: flex;
