--- a/src/components/modal/index.module.scss
+++ b/src/components/modal/index.module.scss
@@ -101,6 +101,8 @@
   position: absolute;
   right: 2%;
   top: 2%;
+
+  cursor: pointer;
 }
 
 .deleteModal__container {
@@ -122,6 +124,8 @@
   position: absolute;
   top: 2%;
   right: 2%;
+
+  cursor: pointer;
 }
 
 .deleteBtn__container {
