--- a/src/components/footer/style.module.scss
+++ b/src/components/footer/style.module.scss
@@ -9,6 +9,7 @@
   background-color: var(--black);
 
   .text {
+    text-align: center;
     font-family: var(--font-secondary);
 
     font-weight: var(--weight-1);
