--- a/src/components/footer/style.module.scss
+++ b/src/components/footer/style.module.scss
@@ -2,6 +2,8 @@
   height: 6.25rem;
   width: 100%;
 
+  margin-top: 1.5rem;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,3 +21,9 @@
     line-height: 1.3919rem;
   }
 }
+
+// @media (max-width: 480px) {
+//   .footer {
+//     margin-top: 1.5rem;
+//   }
+// }
