--- a/src/pages/productPage/style.module.scss
+++ b/src/pages/productPage/style.module.scss
@@ -9,24 +9,30 @@
 
 .productSection {
   width: 80%;
+
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+
   height: 50%;
 
   margin: 2rem auto;
 
   display: flex;
-  align-items: center;
-  gap: 3rem;
 
   img {
-    width: 40%;
-    height: 41.8125rem;
+    width: 50%;
+    height: auto;
     border-radius: var(--radius-1);
   }
 
   .infosDiv {
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
   }
 }
 
@@ -36,10 +42,34 @@
   width: 80%;
   margin: 0.5rem auto;
 
+  overflow: scroll;
+
   ul {
     display: flex;
     gap: 1.5rem;
 
     margin: 1.5rem 0;
+  }
+}
+
+@media (min-width: 1260px) {
+  .productsSection {
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 768px) {
+  .productSection {
+    flex-direction: row;
+    gap: 3rem;
+
+    img {
+      width: 40%;
+      height: 41.8125rem;
+    }
+  }
+
+  .infosDiv {
+    gap: 1.5rem;
   }
 }
