--- a/src/components/bannerSection/style.module.scss
+++ b/src/components/bannerSection/style.module.scss
@@ -18,6 +18,28 @@
     text-align: center;
     margin-bottom: 2rem;
   }
+
+  @media (min-width: 1024px) {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    width: 90%;
+    margin: 0 auto;
+
+    img {
+      margin: unset;
+      height: fit-content;
+      border-radius: var(--radius-1);
+    }
+
+    h1 {
+      text-align: left;
+      width: fit-content;
+      margin-bottom: 1rem;
+    }
+    button {
+      align-self: self-start;
+    }
+  }
 }
 .banner__buttonContainer {
   display: flex;
