--- a/src/components/modal/index.module.scss
+++ b/src/components/modal/index.module.scss
@@ -11,7 +11,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  width: 28rem;
+  width: 90%;
   height: 60%;
   padding: 0.5%;
   display: flex;
@@ -24,6 +24,10 @@
 
   h2 {
     margin-bottom: 3%;
+  }
+
+  @media (min-width: 48rem) {
+    width: 27rem;
   }
 }
 
@@ -132,8 +136,3 @@
   gap: 0.625rem;
 }
 
-@media (max-width: 730px) {
-  .cartModal__container {
-    width: 60%;
-  }
-}
