--- a/src/components/bannerSection/style.module.scss
+++ b/src/components/bannerSection/style.module.scss
@@ -45,3 +45,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.btn__container {
+  display: flex;
+  justify-content: center;
+
+  @media(min-width: 64rem) {
+    justify-content: flex-start;
+  }
+}
