fix: changed the centering of some elements

--- a/src/pages/productPage/style.module.scss
+++ b/src/pages/productPage/style.module.scss
@@ -64,8 +64,13 @@
     gap: 3rem;
 
     img {
-      width: 40%;
+      width: 50%;
       height: 41.8125rem;
+    }
+
+    .infosDiv {
+      align-items: initial;
+      text-align: initial;
     }
   }
 
