--- a/src/components/forms/style.module.scss
+++ b/src/components/forms/style.module.scss
@@ -1,13 +1,21 @@
 .form {
-  width: 35.5rem;
+  width: 90%;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
+
+  h2 {
+    text-align: center;
+  }
 
   .inputsDiv {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    input {
+      width: 100%;
+    }
   }
 
   .buttonsDiv {
@@ -38,4 +46,14 @@
   align-items: center;
   gap: 0.5rem;
   font-size: var(--title-7);
+}
+
+@media (min-width: 1218px) {
+  .form {
+    width: 35.5rem;
+
+    h2 {
+      text-align: initial;
+    }
+  }
 }
