--- a/src/components/forms/style.module.scss
+++ b/src/components/forms/style.module.scss
@@ -1,5 +1,6 @@
 .form {
   width: 90%;
+ 
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -25,19 +26,38 @@
 }
 
 .registerForm__container {
-  width: 35.5rem;
+  width: 100%;
+  
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
-
-.form__inputs {
-  display: flex;
-  flex-direction: column;
+  align-items: center;
   gap: 1rem;
 
-  button {
+  a {
     align-self: flex-end;
+  }
+
+  .form__inputs {
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 1rem;
+
+    input {
+      width: 100%;
+    }
+
+    button {
+      width: 100%;
+      
+      display: flex;
+      justify-content: center;
+      
+      align-self: flex-end;
+    }
   }
 }
 
@@ -45,30 +65,30 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  
   font-size: var(--title-7);
 }
 
-@media (max-width: 480px){
-  .registerForm__container{
-    a{
-      align-self: flex-end;
+@media (min-width: 1218px) {
+  .registerForm__container {
+    width: 90%;
+    
+    align-items: initial;
+
+    a {
+      align-self: initial;
     }
-    max-width: 100%;
-    form{
-      max-width: 100%;
-      input{
-        max-width: 100%;
-      }
-      button{
-        width: 100%;
-        display: flex;
-        justify-content: center;
+
+    .form__inputs {
+      align-items: initial;
+      
+      button {
+        width: 13.0625rem;
+        align-self: flex-end;
       }
     }
   }
-}
 
-@media (min-width: 1218px) {
   .form {
     width: 35.5rem;
 
@@ -77,4 +97,3 @@
     }
   }
 }
-
