--- a/src/pages/registerPage/index.module.scss
+++ b/src/pages/registerPage/index.module.scss
@@ -1,21 +1,19 @@
 .content__container {
-  width: 80%;
+  flex-direction: column;
+  width: 90%;
   margin: 2rem auto;
   display: flex;
   align-items: center;
-  gap: 3rem;
+  gap: 1.8rem;
 
   img {
-    max-height: 37rem;
+    width: 90%;
+    max-height: 35rem;
   }
 }
 
-@media(max-width: 480px){
-  .content__container{
-    max-width: 480px;
-    flex-direction: column;
-    img{
-      width: 100%;
-    }
+@media (min-width: 1218px) {
+  .content__container {
+    flex-direction: row;
   }
 }
