--- a/src/components/forms/style.module.scss
+++ b/src/components/forms/style.module.scss
@@ -14,8 +14,28 @@
     flex-direction: column;
     gap: 1rem;
 
+    position: relative;
+
     input {
       width: 100%;
+    }
+
+    .visibleIcon {
+      position: absolute;
+
+      top: 6.7rem;
+      right: 1rem;
+
+      cursor: pointer;
+    }
+
+    .hiddenIcon {
+      position: absolute;
+
+      top: 6.7rem;
+      right: 1rem;
+
+      cursor: pointer;
     }
   }
 
