feat: user icon for redirection implemented in the header

--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -23,7 +23,12 @@
   }
 }
 
-.cart__headerContainer {
+.icons__headerContainer {
   display: flex;
   align-items: end;
+
+  .icons__div {
+    display: flex;
+    gap: 0.5rem;
+  }
 }
