--- a/src/components/forms/style.module.scss
+++ b/src/components/forms/style.module.scss
@@ -1,30 +1,26 @@
 .form {
-  width: 90%;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
 
   h2 {
     text-align: center;
   }
 
-  .inputsDiv {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  input {
+    width: 100%;
+  }
 
+  .inputDiv {
     position: relative;
-
-    input {
-      width: 100%;
-    }
 
     .visibleIcon {
       position: absolute;
 
-      top: 6.7rem;
-      right: 1rem;
+      top: 1.6rem;
+      right: 1.5rem;
 
       cursor: pointer;
 
@@ -34,8 +30,8 @@
     .hiddenIcon {
       position: absolute;
 
-      top: 6.7rem;
-      right: 1rem;
+      top: 1.6rem;
+      right: 1.5rem;
 
       cursor: pointer;
 
