feat: first part of the mobile first styling completed

--- a/src/components/productList/productCard/index.module.scss
+++ b/src/components/productList/productCard/index.module.scss
@@ -68,16 +68,22 @@
 }
 
 .ProductCardAdminView__container {
-  display: flex;
-  position: relative;
-  align-items: center;
   width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 0 auto;
+
+  position: relative;
   padding: 1%;
   border-radius: 6px;
   img {
-    max-height: 12rem;
-    object-fit: contain;
-    margin-right: 1.5rem;
+    height: 30rem;
+    width: 22rem;
+    // object-fit: contain;
+    // margin-right: 1.5rem;
   }
   &:hover {
     background-color: var(--gray);
@@ -91,8 +97,11 @@
 .ProductCardAdminView__Btncontainer {
   display: flex;
   gap: 1rem;
+  
   position: absolute;
-  right: 20px;
+  
+  right: 7.625rem;
+  bottom: 7.8125rem;
 
   .icon {
     cursor: pointer;
@@ -100,7 +109,15 @@
 }
 
 .ProductCardAdminView__info {
-  h2 {
-    margin-bottom: 0.5rem;
+  margin-top: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+
+  p {
+    font-size: 1.125rem;
   }
 }
