--- a/src/pages/Dashboard/productsListAdminview/index.module.scss
+++ b/src/pages/Dashboard/productsListAdminview/index.module.scss
@@ -1,17 +1,16 @@
 .nav__container {
-  margin-left: 5rem;
-  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   ul {
     display: flex;
     gap: 1.5rem;
-    margin-bottom: 2rem;
   }
 }
 
 .admin__panel {
-  min-height: 72vh;
-  margin: 0 5rem;
+  margin: 0 1rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -19,18 +18,22 @@
 
 .producsSection__header {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-}
+  gap: 1rem;
 
-.title__container {
-  h1 {
-    margin-bottom: 1rem;
+  .title__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
 .productList__container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-bottom: 1rem;
+  height: 37.5rem;
+  display: flex;
+  gap: 1.5rem;
+
+  overflow: scroll;
 }
