--- a/src/components/productList/productCard/index.module.scss
+++ b/src/components/productList/productCard/index.module.scss
@@ -82,8 +82,6 @@
   img {
     height: 30rem;
     width: 22rem;
-    // object-fit: contain;
-    // margin-right: 1.5rem;
   }
   &:hover {
     background-color: var(--gray);
@@ -119,5 +117,33 @@
 
   p {
     font-size: 1.125rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .ProductCardAdminView__container {
+    width: 100%;
+    height: 210px;
+
+    padding: 1rem;
+
+    margin: initial;
+
+    flex-direction: row;
+    gap: 2rem;
+
+    img {
+      width: 11.25rem;
+      height: max-content;
+    }
+
+    .ProductCardAdminView__info {
+      align-items: start;
+    }
+  }
+
+  .ProductCardAdminView__Btncontainer {
+    right: 1rem;
+    top: 6rem;
   }
 }
