--- a/src/pages/Dashboard/productsListAdminview/index.module.scss
+++ b/src/pages/Dashboard/productsListAdminview/index.module.scss
@@ -16,7 +16,7 @@
   gap: 2rem;
 }
 
-.producsSection__header {
+.productsSection__header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,4 +36,38 @@
   gap: 1.5rem;
 
   overflow: scroll;
+}
+
+@media (min-width: 768px) {
+  .nav__container {
+    justify-content: flex-start;
+    margin: 0 5rem;
+  }
+
+  .productsSection__header {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 5rem;
+
+    .title__container {
+      align-items: start;
+    }
+  }
+
+  .admin__panel {
+    margin: 0;
+  }
+
+  .productList__container {
+    width: auto;
+    height: 475px;
+
+    margin: 0 5rem;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(570px, 1fr));
+
+    gap: 3rem;
+    flex-wrap: wrap;
+  }
 }
